------------------------------------------------------------------------
r2595 | gaser | 2024-07-08 21:03:40

Changed paths:
 M CHANGES.txt
 M Contents.m
 M cat_spm_results_ui.m
 M doc/cat.html

Fixed: Added checks for additional cat-tools that should be ignored if CAT12
       is not installed.
------------------------------------------------------------------------
r2583 | gaser | 2024-05-25 15:33:40

Changed paths:
 M CHANGES.txt
 M Contents.m
 M doc/cat.html
 M templates_MNI152NLin2009cAsym/thalamic_nuclei.csv
 M templates_MNI152NLin2009cAsym/thalamic_nuclei.nii
 M templates_MNI152NLin2009cAsym/thalamic_nuclei.txt

Fixed: Corrected wrong labels of thalamic nuclei atlas. Thanks to Jonas Krauß
       for pointing to this error and Manoj Saranathan for help with the atlas
       labels.
------------------------------------------------------------------------
r2582 | gaser | 2024-05-21 01:23:31

Changed paths:
 M CHANGES.txt
 M cat_main_LAS.m
 M cat_vol_iscale.m
 M cat_vol_slice_overlay.m

Fixed: Corrected bug in cat_vol_slice_overlay, where clipping with OV.func was 
       not correct and atlas regions were wrong in that case.
------------------------------------------------------------------------
r2579 | gaser | 2024-05-10 21:01:35

Changed paths:
 M CHANGES.txt
 M cat_plot_scatter.m

Changed: Added confidence interval estimation for slopes to cat_plot_scatter.m.
------------------------------------------------------------------------
r2579 | dahnke | 2024-05-08 17:39:57

Changed paths:
 M CHANGES.txt
 M cat_conf_extopts.m
 M cat_io_writenii.m
 M cat_main.m
 M cat_main1639.m
 M cat_main_registration.m
 M cat_main_report.m
 M cat_main_reportstr.m
 M cat_run.m
 M cat_run_job.m
 M cat_run_job1639.m
 M cat_stat_homogeneity.m
 M tbx_cfg_cat.m

Changed:  Correction and cleanup of the CAT SPM preprocessing batch in 
          cat_conf_extopts, cat_run, cat_run_job[1639], and cat_main1639.
          Improved documentation and help and make batch visible for default 