@@ -3837,8 +3837,9 @@
             <p>If you use CAT12, please cite the following references in your work:</p>
             
             <p><u>CAT12 (in General)</u><br>
-            Gaser C, Dahnke R, Thompson PM, Kurth F, Luders E, Alzheimer&quot;s Disease Neuroimaging Initiative. <a href="https://www.biorxiv.org/content/10.1101/2022.06.11.495736">
-            A Computational Anatomy Toolbox for the Analysis of Structural MRI Data.</a> bioRxiv.</p>
+            Gaser C, Dahnke R, Thompson PM, Kurth F, Luders E, Alzheimer&quot;s Disease Neuroimaging Initiative (2024).
+            <a href="https://doi.org/10.1093/gigascience/giae049">
+            CAT: a computational anatomy toolbox for the analysis of structural MRI data.</a> GigaScience 13, giae049.</p>
 
             <p><u>Surface Estimation</u><br>
             Dahnke R, Yotter RA, Gaser C. <a href="https://doi.org/10.1016/j.neuroimage.2012.09.050">
@@ -3954,8 +3955,8 @@
             <p>C. Gaser, I. Nenadic, B. Buchsbaum, E. Hazlett, M. S. Buchsbaum (2001). <a href="https://doi.org/10.1006/nimg.2001.0771">
             Deformation-based morphometry and its relation to conventional volumetry of brain lateral ventricles in MRI.</a> Neuroimage 13:1140-1145.</p>
             
-            <p>C. Gaser, R. Dahnke, P.M. Thompson, F. Kurth, E. Luders, Alzheimer&quot;s Disease Neuroimaging Initiative. <a href="https://www.biorxiv.org/content/10.1101/2022.06.11.495736">
-            A Computational Anatomy Toolbox for the Analysis of Structural MRI Data.</a> bioRxiv</p>
+            <p>C. Gaser, R. Dahnke, P.M. Thompson, F. Kurth, E. Luders, Alzheimer&quot;s Disease Neuroimaging Initiative (2024). <a href="https://doi.org/10.1093/gigascience/giae049">
+            CAT: a computational anatomy toolbox for the analysis of structural MRI data.</a> GigaScience 13, giae049.</p>
             
             <p>R. Dahnke, R. Yotter, C. Gaser (2012a). <a href="https://doi.org/10.1016/j.neuroimage.2012.09.050">
             Cortical thickness and central surface estimation.</a> Neuroimage 65: 336-348.</p>
